// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

//////////////////user profile table//////////////////////
Table users {
  userId integer [pk, increment]
  //required data
  userName varchar [unique, not null, default: `userId`]
  email varchar (255) [unique, not null]
  avatarUrl Varchar(255) 
  passwordHash varchar(255) [not null]

  //optional data
  birthday date
  location varchar [ref: > userLocation.locationId]
  bio varchar(255)
  gender varchar [ref: > userGender.genderId]

  //Preferences
  emailNotification boolean [default: true]
  messageNotification boolean [default: true]
  chatNotification boolean [default: true]
  globalPushNotification boolean [default: true]

  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

//////////////////////event data///////////////////////
Table events {
  eventId integer [pk, unique]
  creatorId integer [ref: > users.userId, null] 
  
  //basic info
  title varchar(255) [not null]
  description varchar
  posterUrl varchar

  // Time & place
  startDateTime timestamp [not null]
  endDateTime timestamp
  venue integer [ref: > venues.venueId, null]
  location integer [ref: > eventLocation.locationId]//venue takes priority, location as fallback
  
  //ticket & price
  minprice decimal(10,2) [default:0]//use decimal instead of float for accuracy
  maxprice decimal(10,2) [default:0]//api gives back a price-range object
  currency integer [ref: > currency.currencyId]
  ticketlink varchar 

  //performance data
  viewCount integer [default: 0] //tracks how many times an event page has been viewed

  //metadata
  sourcePlatform varchar [ref: > sourcePlatform.sourceId]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

////////////////////////////////api///////////////////////////////////////
Table eventExternalSources {
  eventId integer [ref: > events.eventId, pk]
  externalApiId varchar
  externalApiSource varchar [ref: > sourcePlatform.sourceId] //(ticketmaster, eventbrite, ...)
  externalUrl varchar
  lastSyncedAt timestamp
}
Table sourcePlatform{
  sourceId integer [pk]
  sourceName varchar  //(ticketmaster, eventbrite, ...)
  sourceIconUrl varchar //display on event page
}

/////////////////////////////post data///////////////////////////////////
Table posts {
  postId integer [pk, increment]
  userId integer [ref: > users.userId, not null]
  eventId integer [ref: > events.eventId, null]
  
  postType varchar [ref: > postType.typeId, not null] 
  content text [not null]
  //imageUrls json =>removed. images now store in a seperate table connected with postId

  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}
Table postImages{
  postImageId integer [pk, increment]
  imageUrl varchar(255)
  postId integer [ref: > posts.postId]
}

/////////////////////////////chat data///////////////////////////////////
Table chats {
  chatId integer [pk, increment]
  chatType integer [ref: > chatType.typeId, not null] // one-to-one | group
  eventId integer [ref: > events.eventId, null] // if it's a groupchat, it's connected to an event
  chatName varchar(100) [null]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

Table chatParticipants {
  chatId integer [ref: > chats.chatId]
  userId integer [ref: > users.userId]
  joinedAt timestamp [default: `now()`]
  leftAt timestamp [null]

  isArchived boolean [default: false] // each user archives independently
  archivedAt timestamp
}

/////////////////////////////chat message////////////////////////////////
Table chatMessages {
  messageId integer [pk, increment]
  chatId integer [ref: > chats.chatId, not null]
  senderId integer [ref: > users.userId, not null]
  sentAt timestamp [default: `now()`]
  content text [not null]
  
  isDeleted boolean [default: false] //"deletede for everyone". access is saved for the sender. 
  deletedAt timestamp //clean all the deleted notifications in the database after a period of time
  
}
Table messageVisibility {
  messageId integer [ref: > chatMessages.messageId]
  userId integer [ref: > users.userId] //receivers of the message in the group chat

  isRead boolean [default: false]
  isHidden boolean [default: false] //“Delete for me". other user an still see the message
  hiddenAt timestamp
}

////////////////////////system notification///////////////////////////////
//e.g, - alerts/updates to users (Sarah wants to be your event buddy    (2m ago))
Table notifications {
  notificationId integer [pk, increment]
  userId integer [ref: > users.userId, not null]
  type varchar(50) [not null]
  relatedEntityType varchar [ref: > relatedEntityType.typeId] // event | post | user | message - what it`s about
  relatedEntityId integer //eventId, postId, userId, messageId
  content text
  isRead boolean [default: false]
  isDeleted boolean [default: false] //clean all the deleted notifications after a period of time
  isArchived boolean [default: false]
  sentAt timestamp [default: `now()`]
}

////////////////////////////events interaction//////////////////////////////
//after saving the event, the event is displayed in the users' "planned" section. Other users can see this list and request to be his/her event buddy through that list
Table eventSaves {
  userId integer [ref: > users.userId]
  eventId integer [ref: > events.eventId]
  eventSavedAt timestamp [default: `now()`]
}

Table eventBuddy{
  userId integer [ref: > users.userId, not null]
  buddyId integer [ref: > users.userId, not null]
  eventId integer [ref: > events.eventId, not null]
  status integer [ref: > requestStatus.statusId, not null] // pending | accepted | rejected
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

Table eventAttended{
  userId integer [ref: > users.userId] // the one who logged the attendence
  eventId integer [ref: > events.eventId]
  attended boolean [default: true]
  attendedAt timestamp
  createdAt timestamp [default: `now()`]
  rating integer // 1-5 stars
  postId integer [ref: > posts.postId, null] 
}

/////////////////////////posts interaction////////////////////////////////////
Table postLikes{
  userId integer [ref: > users.userId]
  postId integer [ref: > posts.postId]
  postLikedAt timestamp [default: `now()`]
}

Table postComments{
  commentId integer [pk, increment]
  userId integer [ref: > users.userId, not null]
  postId integer [ref: > posts.postId, not null]
  //parentCommentId integer [ref: > postComments.commentId, null] 
  
  content text [not null]
  createdAt timestamp  [default: `now()`]
  updatedAt timestamp
}

////////////////attribute reference table//////////////////
Table userGender{
  genderId integer [pk]
  genderName varchar //(male, female, non-bi)
}
Table userLocation{
  locationId integer [pk]
  locationName varchar //(Dublin1, Dublin2...)
}
//venues, coordinates (could be used for interactive map d venue pins?..)
Table venues {
  venueId integer [pk, increment]
  venueName varchar(255) [not null]
  address varchar(255)
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  website varchar(255)
  createdAt timestamp
}
//all the location info: both venue and onetime location. connected with the event (as Joris recommended)
Table eventLocation{
  locationId integer [pk, increment]
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  createdAt timestamp
}
Table currency{
  currencyId integer [pk]
  currencyName varchar(3) [default: 'EUR'] 
}
Table postType{
  typeId integer [pk]
  typeName varchar //review | anouncement of new event
}
Table chatType{
  typeId integer [pk]
  typeName varchar // one-to-one, group chat(connected with an event)
}
Table relatedEntityType{
  typeId integer [pk]
  typeName varchar // event | post | user | message - what it`s about
}
Table requestStatus{
  statusId integer [pk]
  statusName varchar // pending | 
}

//////////////interests, tags, mapping table/////////////////////
//Category: broad types (like genres)
Table eventCategories {    
  categoryId integer [pk, increment]
  categoryName varchar(50) [unique, not null]
  description text
}
//Tag: Specific interests (like subgenres)
Table eventTags {
  eventTagId integer [pk, increment]
  tagName varchar(50) [unique, not null]
}
//Category: "I like Music and Theatre"
Table user_category_map { 
  userId integer [ref: > users.userId]
  categoryId integer [ref: > eventCategories.categoryId]
}
//Tag: "I love specifically: Jazz, Indie Rock, Shakespeare"
Table user_tag_map { 
  userId integer [ref: > users.userId]
  eventTagId integer [ref: > eventTags.eventTagId]
}
//Category: "This event is Music"
Table event_category_map{
   eventId integer [ref: > events.eventId]
   categoryId integer [ref: > eventCategories.categoryId]
}
//Tag: "This event is: Jazz, Live Performance"
Table event_tag_map{ 
   eventId integer [ref: > events.eventId]
   eventTagId integer [ref: > eventTags.eventTagId]
}


Table blocked_users {
  blockerId integer [ref: > users.userId] //the person who blocks 
  blockedId integer [ref: > users.userId]
  blockedAt timestamp [default: `now()`]
}
